--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <header class="header">
         <div class="header-left">
-            <h2>いいAAAAAAAAAAAAAA</h2>
+            <h2>12345678910</h2>
             <ul class="socialbtn">
-              <li><a href="https://twitter.com/"><img src="/Users/takadayuuko/Desktop/hide.site/images/icons8-twitter-(四角)-96.png"></a></li>
+              <li><a href="https://twitter.com/"><img src="/Users/takadayuuko/Desktop/hide.site/images/icons8-メール-96.png"></a></li>
               <li><a href="https:///"><img src="/Users/takadayuuko/Desktop/hide.site/images/icons8-メール-96.png"></a></li>
               <li><a href="https://github.com/"><img src="/Users/takadayuuko/Desktop/hide.site/images/icons8-github-96.png"></a></li>
 
@@ -38,8 +38,7 @@
 
     <main class="hide1">
         <div class="gazou1">
-        <!-- <img class="gazou2" src="/Users/takadahideaki/Downloads/Untitled.png"> -->
-        <img class="gazou2" src="http://placehold.jp/800x500.png"alt="101841312e1547bb">
+       <img class="gazou2"src="/Users/takadayuuko/Desktop/ff.jpg"> 
         <!-- https://de48iquggkkh4.cloudfront.net/thumbnail/101841312e1547bb.jpg" alt="101841312e1547bb"> --> 
                                        <!-- <img src="http://placehold.jp/150x50.png"> -->
         </div>
@@ -49,11 +48,8 @@
        <div class="centeralignment">
            <div class="apps">
              <h1>aaaaaaaa作成</h1>
-          
-
-             <p class="icon_man">山田太郎<br></p>
-             <p class="icon-p">iosエンジニア志望</p>
-           </div>
+              <p class="icon_man"><span class="appman">山田太郎<br>iosエンジニア志望</span></p>
+          </div>
              <div class="gaiyou">
                <p>ここに説明文が入ります。</p>
            </div>
@@ -66,13 +62,13 @@
        <div class="centeralignment">
            <div class="gaiyou1">
              <h2 id="jump">サービス概要</h2>
-              <img class="gazou2" src="https://placehold.jp/800x400.png">
-              <!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/docs/flowImage.png?raw=true"> -->
+             <img class="gazou2"src="/Users/takadayuuko/Desktop/ff.jpg"> 
+             <!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/docs/flowImage.png?raw=true"> -->
 
               
 
              <h2>Flow</h2>
-             <img class="gazou2" src="https://placehold.jp/800x400.png">
+             <img class="gazou2"src="/Users/takadayuuko/Desktop/ff.jpg"> 
              <!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/docs/flowImage.png?raw=true"> -->
 
            </div>
@@ -83,7 +79,7 @@
 
      <section class="flex-contianer2">
         <div class="centeralignment">
-           <div class="jittsou">
+           <div class="jittuso">
              <h2>実装機能</h2>
               <p>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
   
@@ -142,12 +138,7 @@
       <div class="centeralignment">
           <div class="learning">
              <h2>学習履歴</h2>
-
-             <p>○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○○</p>
-             <p>○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○○</p>
-             <p>○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○○</p>
-             <p>○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○○</p>
-             <p>○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○◯○○</p>
+　　　　　　　　　<p>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
          </div>
       </div>
      </section>
@@ -156,7 +147,7 @@
 
       自分の写真⇩
       <div class="gazou3">
-            <img class="gazou2" src="//">
+            <img class="gazou2" src="/Users/takadayuuko/Desktop/IMG-1336.JPG">
             </div>
     </main>
 
