--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <main class="hide1">
         <div class="gazou1">
-       <img class="gazou2"src="/Users/takadayuuko/Desktop/ff.jpg"> 
+       <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Untitled%20(6).png?raw=true"> 
         <!-- https://de48iquggkkh4.cloudfront.net/thumbnail/101841312e1547bb.jpg" alt="101841312e1547bb"> --> 
                                        <!-- <img src="http://placehold.jp/150x50.png"> -->
         </div>
