--- a/indexのコピー.html
+++ b/indexのコピー.html
@@ -63,16 +63,8 @@
 
      <section class="flex-contianer1">
        <div class="centeralignment">
-            <h1>アプリ「Cychain」作成</h1>
-            <div class="snsbutton">
-               <i class="lab la-github la-4x"></i>
-               <a href="https://github.com/TakadaHideaki/chychain"target="_blank"><button class="submit">Chychain´s Code</button></a>
-            </div>
-
-
-
            <div class="apps">
-             <!-- <h1>アプリ「Cychain」作成</h1> -->
+             <h1>アプリ「Cychain」作成</h1>
               <p class="icon_man"><span class="appman">高田英明<br>iosエンジニア志望</span></p>
           </div>
              <div class="gaiyou">
@@ -203,7 +195,7 @@
 
        <div class="centeralignment">
           <div class="learning">
-             <h3>アプリ.リリースまでの道のり</h3>
+             <h2>アプリデプロイまでの道のり</h2>
               <p>■開発期間と学習時間</P>
               <p>開発期間: 6ヶ月</p>
               <p>学習時間　平日: 3h, 土日: 8h</p>
