--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
            <div class="apps">
              <!-- <h1>アプリ「Cychain」作成</h1> -->
-              <p class="icon_man"><span class="appman">高田英明<br>iosエンジニア志望</span></p>
+              <p class="lab la-github la-4x"><span class="appman">高田英明&nbsp;&nbsp;iosエンジニア志望</span></p>
           </div>
              <div class="gaiyou">
-               <p>ここに説明文が入ります</p>
+               <p>経歴</p>
            </div>
         </div>
        
@@ -86,7 +86,37 @@
 
        <div class="centeralignment">
            <div class="gaiyou1">
-             <h2 id="jump">サービス概要</h2>
+
+             <h2 id="jump">サービスを作った理由</h2>
+
+
+             <p>現在、出会った事のない人同士を繋ぐサービスは、多々ありますが
+既に、出会った事のある人同士を再び繋ぐサービスが、facebookしか
+見つかりませんでした。</p>
+<p>&nbsp;</p>
+
+<p>しかしFacebookは、多数と繋がる事が前提なので</p>
+<p>•多数とは繋がりがたくないので登録していない(自分はこのケース)</p>
+<p>•検索制限をかけている</p>
+<p>•苗字が変わっている</p>
+
+<p>などのケースでは見つける事ができません。</p>
+<p>&nbsp;</p>
+
+<p>そこで繋がりたい人を指定することで</p>
+<p>•多数に見られないので安心</p>
+<p>•繫りたい人からは、検索される事が出来る</p>
+<p>•繫りたい人が知っている名前で登録すれば名前でのミスマッチが起きない</p>
+
+<p>等により、今でも気になる過去の人、</p>
+
+<p>Facebookで見つからなかった人、を再び繋げる事が出来ると考えて
+サービスを作りました</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
+
              <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Untitled.png?raw=true"> 
              <!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/docs/flowImage.png?raw=true"> -->
              <h2>Flow</h2>
@@ -251,7 +281,7 @@
 
       自分の写真⇩
       <div class="gazou3">
-            <img class="gazou2" src="/Users/takadahideaki/Downloads/Untitled (7).png">
+            <img class="gazou2" src="">
             </div>
     </main>
 
