--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <main class="hide1">
         <div class="gazou1">
-       <img class="gazou2"src="/Users/takadahideaki/Downloads/Untitled.png">
+       <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/app.png?raw=true">
         <!-- https://de48iquggkkh4.cloudfront.net/thumbnail/101841312e1547bb.jpg" alt="101841312e1547bb"> --> 
                                        <!-- <img src="http://placehold.jp/150x50.png"> -->
         </div>
