--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
 
 
 
-             <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Untitled.png?raw=true"> 
-             <!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/docs/flowImage.png?raw=true"> -->
-             <h2>Flow</h2>
+             <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Untitled%20(5).png?raw=true"> 
+  <!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Untitled%20(5).png?raw=true"> -->
+
+    
+            
+ <h2>Flow</h2>
              <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Untitled%20(6).png?raw=true"> 
              <!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/docs/flowImage.png?raw=true"> -->
           </div>
