--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="socialbtn">
                      <a href="https://forms.gle/5WXCsW73pycc8vz28"target="_blank"><i class="las la-envelope la-2x"></i></a>
                    <a href="https://github.com/"target="_blank"><i class="lab la-github la-2x"></i></a>
-                   <a href="https://twitter.com/"target="_blank"><i class="lab la-twitter la-2x"></i></a>
+                   <a href="https://twitter.com/HideakiTakada/"target="_blank"><i class="lab la-twitter la-2x"></i></a>
                </div>
          </div>
 
