--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <div class="snsbutton">
                   <table class="wannko">      <!-- 画像の下に文字 --> 
                   　　<tr>
-                  　　<td style="padding: 0 40px"><a href="https://github.com/"target="_blank"><i class="lab la-github la-4x"></i></a></td>
-                  　　<td style="padding: 0 40px"><a href="https://apps.apple.com/us/app/cychain/id1476139122?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2019-09-28&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a></td>
+                  　　<td style="padding: 0 70px"><a href="https://github.com/"target="_blank"><i class="lab la-github la-4x"></i></a></td>
+                  　　<td style="padding: 0 70px"><a href="https://apps.apple.com/us/app/cychain/id1476139122?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2019-09-28&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a></td>
                   　　<!--link Makerで埋め込みコード作成↑-->
                　　　</tr>
                   　　<tr>
-                  　　<td>sourcecode</td>
-                     <td>ios版配信中</td>
+                  　　<td style="padding-bottom:30px">sourcecode</td>
+                     <td style="padding-bottom:30px">ios版配信中</td>
                   　　</tr>
                   </table>
             </div>
