--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                  <li>GitHubPages　プライバシーポリシーの設置やこのサイトにも利用しています。</li>
              </div>
        </div>
-*/
-      <hr class="senn">
+
+<!--       <hr class="senn">
 
 
 
@@ -255,7 +255,7 @@
      </section>
     
     */
-  
+   -->
   
 
       自分の写真⇩
