--- a/index.html
+++ b/index.html
@@ -83,15 +83,9 @@
              　<!-- <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Untitled.png?raw=true">  -->
              　<!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/docs/flowImage.png?raw=true"> -->
               <h2 id="jump">サービスを作った理由</h2>
-             　<p>現在、出会った事のない人同士を繋ぐサービスは、多々ありますが既に、出会った事のある人同士を再び繋ぐサービスが、facebookしか見つかりませんでした。<br>しかしFacebookは、多数と繋がる事が前提なので<br><br>
-<li>多数とは繋がりがたくないので登録していない(自分はこのケース)</li>
-<li>検索制限をかけている</li>
-<li>苗字が変わっている</li>
-<br>などのケースでは見つけられません。そこで繋がりたい人を指定することで
-<li>多数に見られないので安心</li>
-<li>繋がりたい人からは、検索される事が出来る</li>
-<li>繋がりたい人が知っている名前で登録すれば名前でのミスマッチが起きない。</li>
-<br>等により、今でも気になる過去の人、Facebookで見つからなかった人、を再び繋げる事が出来ると考えてサービスを作りました</p>
+             　<p>  新しい出会い目的のマッチングアプリは沢山有りますが、
+過去に出会っている人と再び繋がる事に特化したマッチングサービスが、facebookしか見つかりませんでした。<br>しかし下記の理由でFacebookを使ってないユーザーやFacebooKで検索しても見つからないケースは沢山あると思い自分で作成しました。<br><br>
+
                <p>&nbsp;</p>
                <p>&nbsp;</p>
               <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Untitled%20(5).png?raw=true"> 
