--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
              　<!-- <img class="gazou2" src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/docs/flowImage.png?raw=true"> -->
               <h2 id="jump">サービスを作った理由</h2>
              　<p>  新しい出会い目的のマッチングアプリは沢山有りますが、
-過去に出会っている人と再び繋がる事に特化したマッチングサービスが、facebookしか見つかりませんでした。<br>しかし下記の理由でFacebookを使ってないユーザーやFacebooKで検索しても見つからないケースは沢山あると思い自分で作成しました。<br><br>
+過去に出会っている人と再び繋がる事に特化したマッチングサービスが、facebookしか見つかりませんでした。<br>しかしFacebookを利用していないユーザーやFacebooKで検索しても見つからないケースは多々あると思い自分で作成しました。<br><br>
 
                <p>&nbsp;</p>
                <p>&nbsp;</p>
