--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
     
     <main class="hide1">
         <div class="gazou1">
-       <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/app.png?raw=true">
+<!--        <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/app.png?raw=true">
+ -->
+              <img class="gazou2"src="https://github.com/TakadaHideaki/Portfolio.github.io/blob/master/Group 6 (2).png?raw=true">
 
-       
         <!-- https://de48iquggkkh4.cloudfront.net/thumbnail/101841312e1547bb.jpg" alt="101841312e1547bb"> --> 
                                        <!-- <img src="http://placehold.jp/150x50.png"> -->
         </div>
